--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html>
   <head>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
-    <div> - 404 PAGE -
-      </div>
+    <p class="big">Page 404</p>
+
+    <p class="exemple">Mon nom est <span>Axel</span> et je suis à <span>Becode</span></p>
   </body>
 </html>
