Modifications globale structure et fond

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
+    <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text|Roboto+Mono:300i" rel="stylesheet">
+        <title>Error 404</title>
+    </head>
 
-  <body>
-    <p class="big">Page 404</p>
+        <body>
+          <div class="BigTxt">
+            <h1>404</h1></div>
 
-    <p class="exemple">Mon nom est <span>Axel</span> et je suis à <span>Becode</span></p>
-  </body>
+              <div class="SmallTxt"><p>ErRoR! eRrOr!</p></div>
+                <div class="link"><a href="https://github.com/ThankUniverse" color= #CC2430>CLicK hERe!!</a></div>
+        </body>
 </html>
