--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+      <link href='https://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" type="text/css" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text|Roboto+Mono:300i" rel="stylesheet">
@@ -11,8 +12,7 @@
         <body>
           <div class="BigTxt">
             <h1>404</h1></div>
-
               <div class="SmallTxt"><p>ErRoR! eRrOr!</p></div>
-                <div class="link"><a href="https://github.com/ThankUniverse" color= #CC2430>CLicK hERe!!</a></div>
+                <div class="link"><a href="https://github.com/ThankUniverse" </a>CLicK hERe!!</div>
         </body>
 </html>
